--- a/notebooks/Notebook Cartão de Crédito.ipynb
+++ b/notebooks/Notebook Cartão de Crédito.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "51686d04",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from minio import Minio\n",
+    "import os, sys, path\n",
+    "import glob\n",
+    "# import os; os.stat('../data/raw/CC GENERAL.parquet')\n",
     "\n",
     "pd.set_option('display.max_rows', 50)\n",
     "pd.set_option('display.max_columns', 20)"
@@ -34,7 +38,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
+   "id": "cf53404f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Minio(\n",
+    "        \"localhost:9000\",\n",
+    "        access_key=\"minioadmin\",\n",
+    "        secret_key=\"minioadmin\",\n",
+    "        secure=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "5f245d01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<minio.helpers.ObjectWriteResult at 0x17907096670>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.fput_object(\n",
+    "        \"processing\",\n",
+    "        \"CC GENERAL.parquet\",\n",
+    "        \"../data/raw/CC GENERAL.parquet\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "2a77bab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<minio.datatypes.Object at 0x179070969d0>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.fget_object(\n",
+    "        \"processing\",\n",
+    "        \"CC GENERAL.parquet\",\n",
+    "        \"../data/raw/temp_.parquet\")\n",
+    "# df = pd.read_parquet('../data/raw/CC GENERAL.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f2fe1b9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salvando arquivo com a extensão \"parquet\"\n",
+    "df = pd.read_csv('../data/raw/CC GENERAL.csv')\n",
+    "df.head()\n",
+    "df.to_parquet('../data/raw/CC GENERAL.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "9f1c0407",
    "metadata": {},
    "outputs": [
@@ -214,21 +296,21 @@
        "4   678.334763        244.791237          0.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Excluindo colunas que não serão utilizadas\n",
-    "df = pd.read_csv('../data/raw/CC GENERAL.csv')\n",
+    "df = pd.read_parquet('../data/raw/CC GENERAL.parquet')\n",
     "df.drop(columns=['CUST_ID','TENURE'], inplace=True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "id": "bff7b19c",
    "metadata": {},
    "outputs": [
@@ -238,7 +320,7 @@
        "(8950, 16)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "id": "b3c75526",
    "metadata": {},
    "outputs": [
@@ -283,7 +365,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "id": "a6c2667a",
    "metadata": {},
    "outputs": [
@@ -304,7 +386,7 @@
        "-314"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "id": "c00da284",
    "metadata": {},
    "outputs": [],
@@ -333,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "id": "aabdd2a2",
    "metadata": {},
    "outputs": [
@@ -359,7 +441,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "id": "40f09f2d",
    "metadata": {},
    "outputs": [
@@ -642,7 +724,7 @@
        "PRC_FULL_PAYMENT                      1.00000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "id": "e9518423",
    "metadata": {},
    "outputs": [],
@@ -671,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "id": "13c90707",
    "metadata": {},
    "outputs": [
@@ -693,7 +775,7 @@
        "        3.15915455e-02, 4.41568390e-02, 0.00000000e+00]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 81,
    "id": "8e9636ee",
    "metadata": {},
    "outputs": [],
@@ -724,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "id": "37629ac9",
    "metadata": {},
    "outputs": [],
@@ -735,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "id": "8e8334bb",
    "metadata": {},
    "outputs": [
@@ -745,7 +827,7 @@
        "0.36490795906316703"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,41 +840,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "id": "3896d3a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2044536936539567"
+       "1.0454626645390783"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dbs = davies_bouldin_score(values, labels)\n",
+    "dbs = davies_bouldin_score(values, labels1)\n",
     "dbs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbc4fc19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3668456c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
